2016-11-24 huku <huku@grhack.net>

    * Completely re-wrote and re-designed XDE to make it able to perform large
      scale analyses with the help of `pyrsistence' (tagged as v2.0).


2015-08-28 huku <huku@grhack.net>

    * Added class `XRefs'; a container for an instruction's code and data
      cross references.
    * Replaced all calls to `get_xxx_target_addresses()' with `get_xrefs()', a
      generic function returning an `XRefs' instance.
    * Modified class `BasicBlock'. It's now easier to determine exact basic
      block boundaries.
    * Several improvements in disassembly and function detection logic.
    * Added method `get_function_basic_blocks()' in class `Disassembler'.
    * Added "TODO" file and sample codes in "examples/".


2015-08-17 huku <huku@grhack.net>

    * First public release.
